--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <h1>Hangman!</h1>
         <h3>Tetris</h3>
+        <h4>Number of Incorrect Guess Left: <small><span id="score">10</span></small></h4>
     </header>
 
     <div class="underscores">_ _ _ _</div>
