duplicated letter for words with duplicate letters -- not yet finsihed

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
     <header>
         <h1>Hangman!</h1>
-        <h3>Tetris</h3>
         <h4>Number of Incorrect Guess Left: <small><span id="score">10</span></small></h4>
     </header>
 
     <div class="underscores">_ _ _ _</div>
-    <div class="correct">Correct Answers</div>
+
+    <div class="correct">...waiting for your correct answers</div>
     <div class="wrong">Wrong Answer</div>
+
 
     <script src="./assets/js/main.js"></script>    
 </body>
