adding Start Game  button -- need to move words to object with hint

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="correct">...waiting for your correct answers</div>
     <div class="wrong">Wrong Answer</div>
 
-
+    <input type="button" onclick="startGame()" value="Restart Game" />
     <script src="./assets/js/main.js"></script>    
 </body>
 </html>
