--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hangman</title>
-    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.css">    
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Hangman!</h1>
+    <header class="jumbotron">
+        <h1>Hangman!<br><small>Press any key to get started!</small></h1>
         <h4>Number of Incorrect Guess Left: <small><span id="score">10</span></small></h4>
     </header>
 
     <div class="underscores">_ _ _ _</div>
-
-    <div class="correct">...waiting for your correct answers</div>
-    <div class="wrong">Wrong Answer</div>
+    <div class="row">
+        <div class="col-md-6 correct card text-white bg-success">Correct Answers</div>
+        <div class="col-md-6 wrong card text-white bg-danger">Wrong Answer</div>
+    </div>
+    <div class="text-center">
+        <h3 class="hint"></h3>
+    </div>
+    
+   
 
     <input type="button" onclick="startGame()" value="Restart Game" />
     <script src="./assets/js/main.js"></script>    
