--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header class="jumbotron">
-        <h1>Hangman!<br><small>Press any key to get started!</small></h1>
-        <h4>Number of Incorrect Guess Left: <small><span id="score">10</span></small></h4>
+        <h1>Hangman!<br><small class="subtitle text-muted">Press any key to get started!</small></h1>
+        <h4>Number of Incorrect Guess Left: <big><span id="score">10</span></big></h4>
     </header>
 
     <div class="underscores">_ _ _ _</div>
