--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hangman</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">    
     <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.css">    
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -21,8 +22,10 @@
         <div class="col-md-6 wrong card text-white bg-danger">Wrong Answer</div>
     </div>
     <div class="text-center">
+        <h2 class="text-muted">Hint:</h2>
         <h3 class="hint"></h3>
     </div>
+    <div class="img"></div>
     
    
 
